--- a/Portfolio/stylesheet.css
+++ b/Portfolio/stylesheet.css
@@ -1,5 +1,11 @@
 header {
     font-family: 'Garamond', 'Times New Roman';
+    /* SAVE IMAGE AND PUT IN SEP FILE- NO LINK , ALSO HOW TO MAKE BG IMAGE LARGER*/
+    background-image: url(http://2.bp.blogspot.com/-SXQEyR4d-VM/UcCPYHiA8DI/AAAAAAAACT0/uT0AVssh8gA/s1600/IMG_1938.JPG);
+}
+
+#logo {
+    text-align: center;
 }
 
 h1 {
@@ -9,7 +15,8 @@ h1 {
 }
 
 h2 {
-    color: #696969;
+    /*color: #696969;*/
+    color: #000000;
     font-size: 35px;
     text-align: center;
 }
@@ -48,8 +55,9 @@ h2 {
 }
 
 /* FIGURE OUT HOW TO MAKE BUTTON ACTIVE */
-.active {
+.nav li a:active {
     background-color: #000000;
+    color: white;
 }
 
 /* FIGURE OUT HOW TO MAKE THE NAV BAR STICKY */
@@ -64,42 +72,8 @@ p {
     margin-right: auto;
 }
 
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #E1AD9D;
-    overflow: hidden;
-}
 
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    display: block;
-    display: inline-block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #696969;
-    color: black;
-}
-
-/* Add an active class to highlight the current page */
-.active {
-    background-color: #696969;
-    color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-    display: none;
-}
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) 
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
@@ -108,7 +82,7 @@ p {
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) 
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
@@ -121,4 +95,20 @@ p {
     display: block;
     text-align: left;
   }
+}
+
+*/
+
+footer { 
+    display: inline;
+}
+
+footer p {
+       font-size: 15px;
+}
+
+.social {
+   float: center;
+   text-align: center;
+   overflow: auto; 
 }
