--- a/Portfolio/stylesheet.css
+++ b/Portfolio/stylesheet.css
@@ -1,6 +1,12 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
+/* Header stuff */
+
 header {
     font-family: 'Garamond', 'Times New Roman';
-    /* SAVE IMAGE AND PUT IN SEP FILE- NO LINK , ALSO HOW TO MAKE BG IMAGE LARGER*/
     background-image: url('images/backgroundimage.JPG');
 }
 
@@ -21,6 +27,14 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    color: #E1AD9D;
+    font-size: 30px;
+    font-family: 'Courier New';
+}
+
+/* Nav bar */
+
 .nav {
     border: 1px solid #ccc;
     border-width:1px 0;
@@ -31,6 +45,8 @@ h2 {
     background-color: #E1AD9D;
     text-align: center;
     width: 100%;
+    position: fixed;
+    top: 0;
 }
 
 .nav li {
@@ -43,24 +59,29 @@ h2 {
 
 .nav li a {
     display: inline-block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 10px;
     text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
 .nav li a:hover {
     background-color: #696969;
 }
 
-/* FIGURE OUT HOW TO MAKE BUTTON ACTIVE */
+
 .nav li a:active {
-    background-color: #000000;
+    background-color: #C0C0C0;
     color: white;
 }
 
-/* FIGURE OUT HOW TO MAKE THE NAV BAR STICKY */
+ul.nav li a.active{
+    color: white;
+    background-color: black;
+}
+
+
+/* Paragraphs */
 
 p {
     font-family: 'Garamond', 'Times New Roman';
@@ -72,32 +93,77 @@ p {
     margin-right: auto;
 }
 
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+@media all and (max-width: 500px){
+p {
+    width: 100%;
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
 }
 
-*/
+/* Projects page */
+
+.projects {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.content h3 {
+    text-align: center;
+}
+
+
+iframe {
+    width: 90vw;
+    height: 40vw;
+    margin: 30px 60px;
+}
+
+#project2 iframe {
+    margin-left: 130px
+}
+
+#project3 iframe {
+    margin-right: 100px
+}
+
+
+/* Index page */
+
+.pictures {
+    text-align: center;
+}
+
+.pictures img {
+    width:  250px;
+    height: 250px;
+    margin: 50px 10px;
+}
+
+/* Contact Page */
+
+#map {
+    height: 400px;
+    width: 70%;
+    text-align: center;
+    display: block;
+    margin: auto;
+    border: 5px solid black;
+    padding: 10px;
+}
+
+#email {
+    text-decoration: none;
+    color: #E1AD9D;
+    text-align: center;
+}
+
+#email a {
+    color: inherit; 
+}
+
+/* Footer */
 
 footer { 
     display: inline;
@@ -112,3 +178,55 @@ footer p {
    text-align: center;
    overflow: auto; 
 }
+
+.social ul {
+    list-style-type: none;
+    margin: 0;
+    padding:0;
+    -webkit-margin-before: 0em;
+
+
+}
+
+@media all and (min-width: 450px){
+.social ul li {
+    display: inline-block;
+}
+
+}
+
+@media all and (max-width: 1000px){
+    p {
+        width: 90%;
+    }
+
+    .nav li a {
+        display: block;
+    }
+
+    header {
+        margin-top: 240px;
+    }
+}
+
+@media all and (max-width: 600px){
+    p {
+        width: 100%;
+    }
+
+    .nav li {
+        display: block;
+    }
+
+        header {
+        margin-top: 165px;
+    }
+
+    .projects {
+    display: inline-block;
+}
+
+
+}
+
+
