--- a/Portfolio/stylesheet.css
+++ b/Portfolio/stylesheet.css
@@ -136,6 +136,28 @@ iframe {
 
 /* Index page */
 
+#main_content h2 {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+        typing 7.5s steps(40, end),
+        blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+
 .pictures {
     text-align: center;
 }
@@ -160,7 +182,7 @@ iframe {
 
 #email {
     text-decoration: none;
-    color: #E1AD9D;
+    color: #8c3920;
     text-align: center;
 }
 
