--- a/Portfolio/stylesheet.css
+++ b/Portfolio/stylesheet.css
@@ -138,7 +138,7 @@ iframe {
 
 #main_content h2 {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange; /* The typwriter cursor */
+    border-right: .15em #E1AD9D; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
@@ -155,7 +155,7 @@ iframe {
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange; }
+  50% { border-color: #E1AD9D; }
 }
 
 .pictures {
